--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-.container {
+:root {
+  --light: rgb(245, 245, 245);
+  --dark: rgb(17, 24, 39);
+  --grey: rgb(209, 213, 219);
+}
+
+.wrapper {
   width: 100%;
   min-height: 100vh;
   background-image: linear-gradient(
@@ -9,5 +15,52 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 1rem;
+  overflow: hidden;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 2rem;
+}
+
+.search-bar-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
+}
+
+.search-bar {
+  height: 100%;
+  outline: none;
+  flex-grow: 1;
+  border: 0;
+  border-bottom-left-radius: 9999px;
+  border-top-left-radius: 9999px;
+  background-color: var(--light);
+  font-size: 1.25rem;
+  padding: 0.5rem 1rem;
+}
+
+.search-bar::placeholder {
+  color: var(--dark);
+}
+
+.search-button {
+  display: flex;
+  border: 0;
+  background-color: var(--light);
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  outline: none;
+  cursor: pointer;
+}
+
+.search-button svg {
+  height: 3rem;
+  width: auto;
+  padding: 0.5rem;
 }
